--- a/package.json
+++ b/package.json
@@ -1,1 +1,14 @@
-"build": "next build && next export"
+{
+  "name": "mulanex-v2-demo",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "next": "14.2.31",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  }
+}
