--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mulanex-v2-demo",
+  "name": "mulanex-v2.1-premium",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
@@ -7,8 +7,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.31",
+    "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.2"
   }
 }
